modified:   _config.yml 	modified:   _includes/svg-icons.html 	modified:   _layouts/default.html

--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://avatars2.githubusercontent.com/u/23624596?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: thejordanprice@gmx.com
+  email: # thejordanprice@gmx.com
   facebook:
   flickr:
-  github: thejordanprice/thejordanprice.github.io
+  github: # thejordanprice/thejordanprice.github.io
   instagram:
   linkedin:
   pinterest:
@@ -37,7 +37,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-56756896-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
