--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jordan Price
 
 # Short bio or description (displayed in the header)
-description: Developer from Sandusky, Ohio
+description: Father, programmer, musician, and bit hoarder.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/23624596?v=3&s=460
